When proxying weblibs, rewrite URLs in CSS.